# games_sandtetris

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake_build_Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  game
cmake_build_Debug/.cmake/api/v1/reply/: codemodel-v2-b22cc6a5b69f96a4be7f.json  index-2023-07-17T16-42-19-0090.json  target-game-Debug-3f29e1a036a44c292f9f.json
lib/: Constants.h  Game.h  PressedButtons.h  Rectangle.h  Tetramino.h  Utils.h
src/: game.cpp
